force-app/main/default/objects/GiftCommitment/GiftCommitment.object-meta.xml
<CustomObject>
</CustomObject>