force-app/main/default/objects/GiftCommitment/fields/FQS_Gift_Commitment_Category__c.field-meta.xml
<CustomField>
    <fullName>FQS_Gift_Commitment_Category__c</fullName>
    <description>Set by the FQS Gift Entry launcher on the parent Gift Commitment based on the branch chosen. Child Gift Transactions inherit the mapped category via the before-save `FQS_Auto_Category_Gift_Transaction` flow when their own `FQS_Gift_Transaction_Category__c` is blank and `GiftCommitmentId` is populated.</description>
    <inlineHelpText>Classifies the type of commitment this record represents. Choose *Pledged Gift* for a one-time promise paid over time, *Recurring Gift* for an ongoing donation cadence, *Grant Payout* for foundation or institutional grant disbursements.</inlineHelpText>
    <label>Gift Commitment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pledged Gift</fullName><default>false</default><label>Pledged Gift</label></value>
            <value><fullName>Recurring Gift</fullName><default>false</default><label>Recurring Gift</label></value>
            <value><fullName>Grant Payout</fullName><default>false</default><label>Grant Payout</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>