force-app/main/default/objects/GiftCommitment/fields/FQS_Is_Entry_Commitment__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Entry_Commitment__c</fullName>
    <description>Boolean formula reading the FQS Donor Grouping CMDT thresholds. Configure via Setup → Custom Metadata Types or the FQS Setup flow → Configure Donor Groupings.</description>
    <formula>AND(
  ExpectedTotalCmtAmount &gt;= $CustomMetadata.FQS_Donor_Tier__mdt.Entry.Lifetime_Min_Amount__c,
  ExpectedTotalCmtAmount &lt; $CustomMetadata.FQS_Donor_Tier__mdt.Mid.Lifetime_Min_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set automatically. Checked when this commitment's total expected amount falls in the corresponding donor grouping. Your administrator controls the threshold through the FQS Setup flow.</inlineHelpText>
    <label>Is Entry Commitment</label>
    <type>Checkbox</type>
</CustomField>