force-app/main/default/objects/GiftCommitment/fields/FQS_Is_Major_Commitment__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Major_Commitment__c</fullName>
    <description>Boolean formula that returns TRUE when ExpectedTotalCmtAmount meets or exceeds the Major.Lifetime_Min_Amount__c value in FQS_Donor_Grouping custom metadata. GiftCommitment has no CurrentAmount field, so ExpectedTotalCmtAmount (total pledged value) is used as the commitment's amount basis. Lifetime thresholds are used because a commitment represents a total pledge, not a single transaction. Thresholds are configured via Setup → Custom Metadata Types → FQS Donor Grouping or the FQS Donor Grouping Configurator screen flow. Changing threshold values recalculates this field across all Gift Commitment records retroactively — no redeployment or batch job required. Reports and dashboards using this field will reflect the new values immediately.</description>
    <formula>ExpectedTotalCmtAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Lifetime_Min_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. Marked TRUE when this commitment's total expected amount qualifies for the Major giving tier. Your administrator controls the threshold amount.</inlineHelpText>
    <label>Is Major Commitment</label>
    <type>Checkbox</type>
</CustomField>