force-app/main/default/objects/GiftCommitment/fields/FQS_Match_Eligible__c.field-meta.xml
<CustomField>
    <fullName>FQS_Match_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, a corporate matching gift is expected against this commitment. The FQS Gift Entry launcher reads this flag on the Pledge Payment leaf to default the match question to Yes. See .planning/fqs-gift-entry-wizard-plan.md.</description>
    <inlineHelpText>Set to true if a corporate matching gift is expected against this commitment. The Gift Entry launcher reads this to default the match question on payments recorded against this commitment.</inlineHelpText>
    <label>Match Eligible</label>
    <type>Checkbox</type>
</CustomField>