force-app/main/default/objects/GiftCommitment/fields/FQS_Restriction_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Restriction_Release_Date__c</fullName>
    <description>Date on or after which a time-restricted gift becomes eligible to be moved out of restricted funds. Blank means no time restriction. Interpretation is report-defined — no automatic release logic. Used with the linked GiftDesignation's restriction type to identify dual-restricted (purpose + time) gifts. See .planning/fqs-designations-plan.md.</description>
    <inlineHelpText>If the donor restricted this commitment to a specific timeframe, enter the date on or after which the funds may be moved out of restricted net assets. Leave blank for purpose-only or permanently restricted commitments.</inlineHelpText>
    <label>Restriction Release Date</label>
    <type>Date</type>
</CustomField>