force-app/main/default/objects/GiftCommitment/listViews/FQS_Grant_Payouts.listView-meta.xml
<ListView>
    <fullName>FQS_Grant_Payouts</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>ExpectedTotalCmtAmount</columns>
    <columns>FulfillmentType</columns>

    <columns>WrittenOffAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Commitment_Category__c</field>
        <operation>equals</operation>
        <value>Grant Payout</value>
    </filters>
    <label>Grant Payouts</label>
</ListView>