force-app/main/default/objects/GiftCommitment/listViews/FQS_Lapsed_Recurring.listView-meta.xml
<ListView>
    <fullName>FQS_Lapsed_Recurring</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>Status</columns>
    <columns>LastPaidTransactionDate</columns>
    <columns>NextTransactionDate</columns>
    <columns>ExpectedTotalCmtAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Commitment_Category__c</field>
        <operation>equals</operation>
        <value>Recurring Gift</value>
    </filters>
    <filters>
        <field>LastPaidTransactionDate</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Lapsed Recurring — No Gift 60d</label>
</ListView>