force-app/main/default/objects/GiftCommitment/listViews/FQS_Past_Due_Installments.listView-meta.xml
<ListView>
    <fullName>FQS_Past_Due_Installments</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>Status</columns>
    <columns>NextTransactionDate</columns>
    <columns>NextTransactionAmount</columns>
    <columns>ExpectedTotalCmtAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>NextTransactionDate</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>FQS Past Due Installments</label>
</ListView>