force-app/main/default/objects/GiftCommitment/listViews/FQS_Pledged_Gifts.listView-meta.xml
<ListView>
    <fullName>FQS_Pledged_Gifts</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>ExpectedTotalCmtAmount</columns>
    <columns>FulfillmentType</columns>
    <columns>FormalCommitmentType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Commitment_Category__c</field>
        <operation>equals</operation>
        <value>Pledged Gift</value>
    </filters>
    <label>Pledged Gifts</label>
</ListView>