force-app/main/default/objects/GiftCommitment/listViews/FQS_Recurring_Gifts.listView-meta.xml
<ListView>
    <fullName>FQS_Recurring_Gifts</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>ExpectedTotalCmtAmount</columns>
    <columns>RecurrenceType</columns>

    <columns>NextTransactionDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Commitment_Category__c</field>
        <operation>equals</operation>
        <value>Recurring Gift</value>
    </filters>
    <label>FQS Recurring Gifts</label>
</ListView>